> COMMIT

# Created
- DescList.tsx
- RecordModal.tsx

# Refactored
- TimelineRecord/index.tsx

# Imported

## TODO
- Wrong Password Error redirects to Register Form

## NOTES
- Dashboard
  -> Show atleast 5 latest records 
- Delete Record
- Edit Record
- Reports
  -> Total Hrs of all records