@@ -1,4 +1,5 @@
-export type AddRecordType = {
+export type RecordType = {
+  docId?: string
   date: Date | null
   duration: Array<Date>
   breakDuration: Array<Date> | null
